# udp-socket

./: .gitignore  CMakeLists.txt  README.md
Client/: CMakeLists.txt  Client.cpp  Client_1.cpp  Client_2.cpp
Server/: CMakeLists.txt  Server.cpp  Server.h
temp/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  UDP Socket.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
temp/Client/: Client.vcxproj  Client.vcxproj.filters
temp/Server/: Server.vcxproj  Server.vcxproj.filters
temp/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate
